succint test harness