@@ -577,74 +577,73 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     // #endregion
     // #region Runtime Evaluation Tests
 
+    String variantKey = "premium-variant";
+    String variantValue = "gold";
+    String flagKey = "test-flag";
+    String distinctIdContextKey = "distinct_id";
+
     public void testReturnVariantWhenRuntimeEvaluationConditionsSatisfied() {
-        List<Variant> variants = Arrays.asList(new Variant("premium-variant", "gold", false, 1.0f));
 
-        Map<String, Object> runtimeEval = new HashMap<>();
-        runtimeEval.put("plan", "premium");
-        List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, runtimeEval, null, null));
+        Map<String, Object> runtimeEval = Map.of(
+            "==", 
+            List.of(
+                Map.of("var", "plan"), // Key
+                "premium"              // Value
+            )
+        );
+        List<Rollout> rollouts = toRuntimeRule(runtimeEval);
+        createFlag(rollouts);
 
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        Map<String, Object> customProps = Map.of("plan", "premium");
+        String result = evaluateFlagsWithRuntimeParameters(customProps);
 
+        assertEquals(variantValue, result);
+    }
+
+    private void createFlag(List<Rollout> rollouts) {
+        List<Variant> variants = Arrays.asList(new Variant(variantKey, variantValue, false, 1.0f));
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
         provider = createProviderWithResponse(response);
+    }
 
-        // Context with matching custom properties
+    private String evaluateFlagsWithRuntimeParameters(Map<String, Object> customProps) {
         provider.startPollingForDefinitions();
-        Map<String, Object> customProps = new HashMap<>();
-        customProps.put("plan", "premium");
         Map<String, Object> context = buildContextWithProperties("user-123", customProps);
-
-        String result = provider.getVariantValue("test-flag", "fallback", context);
-
-        assertEquals("gold", result);
-        assertEquals(1, eventSender.getEvents().size());
+        String result = provider.getVariantValue(flagKey, "fallback", context);
+        return result;
     }
 
     @Test
     public void testReturnVariantWhenLegacyRuntimeEvaluationConditionsSatisfied() {
-        List<Variant> variants = Arrays.asList(new Variant("premium-variant", "gold", false, 1.0f));
+        Map<String, Object> runtimeEval = Map.of("plan", "premium");
+        List<Rollout> rollouts = toLegacyRuntimeRule(runtimeEval);
+        createFlag(rollouts);
 
-        // Runtime evaluation: requires plan=premium
-        Map<String, Object> runtimeEval = new HashMap<>();
-        runtimeEval.put("plan", "premium");
-        List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, runtimeEval, null, null));
+        Map<String, Object> customProps = Map.of("plan", "premium");
+        String result = evaluateFlagsWithRuntimeParameters(customProps);
 
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
-
-        provider = createProviderWithResponse(response);
-
-        // Context with matching custom properties
-        provider.startPollingForDefinitions();
-        Map<String, Object> customProps = new HashMap<>();
-        customProps.put("plan", "premium");
-        Map<String, Object> context = buildContextWithProperties("user-123", customProps);
-
-        String result = provider.getVariantValue("test-flag", "fallback", context);
-
-        assertEquals("gold", result);
+        assertEquals(variantValue, result);
         assertEquals(1, eventSender.getEvents().size());
+    }
+
+    private List<Rollout> toLegacyRuntimeRule(Map<String, Object> runtimeEval) {
+        List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, runtimeEval, null, null));
+        return rollouts;
+    }
+    private List<Rollout> toRuntimeRule(Map<String, Object> runtimeEval) {
+        List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, runtimeEval, null, null, null));
+        return rollouts;
     }
 
     @Test
     public void testReturnFallbackWhenLegacyRuntimeEvaluationConditionsNotSatisfied() {
-        List<Variant> variants = Arrays.asList(new Variant("premium-variant", "gold", false, 1.0f));
+        Map<String, Object> runtimeEval = Map.of("plan", "premium");
 
-        // Runtime evaluation: requires plan=premium
-        Map<String, Object> runtimeEval = new HashMap<>();
-        runtimeEval.put("plan", "premium");
-        List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, runtimeEval, null, null));
+        List<Rollout> rollouts = toLegacyRuntimeRule(runtimeEval);
+        createFlag(rollouts);
 
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
-
-        provider = createProviderWithResponse(response);
-
-        // Context with non-matching custom properties
-        provider.startPollingForDefinitions();
-        Map<String, Object> customProps = new HashMap<>();
-        customProps.put("plan", "free");
-        Map<String, Object> context = buildContextWithProperties("user-123", customProps);
-
-        String result = provider.getVariantValue("test-flag", "fallback", context);
+        Map<String, Object> customProps = Map.of("plan", "free");
+        String result = evaluateFlagsWithRuntimeParameters(customProps);
 
         assertEquals("fallback", result);
         assertEquals(0, eventSender.getEvents().size());
@@ -657,19 +656,19 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testTrackExposureWhenVariantIsSelected() {
         List<Variant> variants = Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f));
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
 
         Map<String, Object> context = buildContext("user-123");
         provider.startPollingForDefinitions();
-        provider.getVariantValue("test-flag", "fallback", context);
+        provider.getVariantValue(flagKey, "fallback", context);
 
         assertEquals(1, eventSender.getEvents().size());
         MockEventSender.ExposureEvent event = eventSender.getEvents().get(eventSender.getEvents().size() - 1);
         assertEquals("user-123", event.distinctId);
         assertEquals("$experiment_started", event.eventName);
-        assertEquals("test-flag", event.properties.getString("Experiment name"));
+        assertEquals(flagKey, event.properties.getString("Experiment name"));
         assertEquals("variant-a", event.properties.getString("Variant name"));
         assertEquals("local", event.properties.getString("Flag evaluation mode"));
         assertTrue(event.properties.getLong("Variant fetch latency (ms)") >= 0);
@@ -683,7 +682,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         Map<String, Object> context = buildContext("user-123");
         provider.startPollingForDefinitions();
-        provider.getVariantValue("test-flag", "fallback", context);
+        provider.getVariantValue(flagKey, "fallback", context);
 
         assertEquals(0, eventSender.getEvents().size());
     }
@@ -692,14 +691,14 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testDoNotTrackExposureWhenDistinctIdIsMissing() {
         List<Variant> variants = Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f));
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
 
         // Context without distinct_id
         provider.startPollingForDefinitions();
         Map<String, Object> context = new HashMap<>();
-        provider.getVariantValue("test-flag", "fallback", context);
+        provider.getVariantValue(flagKey, "fallback", context);
 
         // No exposure should be tracked (and it returns fallback anyway)
         assertEquals(0, eventSender.getEvents().size());
@@ -712,7 +711,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testReturnReadyWhenFlagsAreLoaded() {
         List<Variant> variants = Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f));
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
 
@@ -761,13 +760,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testIsEnabledReturnsTrueForBooleanTrueVariant() {
         List<Variant> variants = Arrays.asList(new Variant("enabled", true, false, 1.0f));
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
 
         Map<String, Object> context = buildContext("user-123");
         provider.startPollingForDefinitions();
-        boolean result = provider.isEnabled("test-flag", context);
+        boolean result = provider.isEnabled(flagKey, context);
 
         assertTrue(result);
     }
@@ -787,7 +786,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         // Start with initial flag definition
         List<Variant> variants1 = Arrays.asList(new Variant("variant-old", "old-value", false, 1.0f));
         List<Rollout> rollouts1 = Arrays.asList(new Rollout(1.0f));
-        String response1 = buildFlagsResponse("test-flag", "distinct_id", variants1, rollouts1, null);
+        String response1 = buildFlagsResponse(flagKey, distinctIdContextKey, variants1, rollouts1, null);
 
         provider = new TestableLocalFlagsProvider(config, SDK_VERSION, eventSender);
         provider.setMockResponse("/flags/definitions", response1);
@@ -796,20 +795,20 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         Map<String, Object> context = buildContext("user-123");
 
         // First evaluation should return old value
-        String result1 = provider.getVariantValue("test-flag", "fallback", context);
+        String result1 = provider.getVariantValue(flagKey, "fallback", context);
         assertEquals("old-value", result1);
 
         // Simulate a polling update by changing the mock response
         List<Variant> variants2 = Arrays.asList(new Variant("variant-new", "new-value", false, 1.0f));
         List<Rollout> rollouts2 = Arrays.asList(new Rollout(1.0f));
-        String response2 = buildFlagsResponse("test-flag", "distinct_id", variants2, rollouts2, null);
+        String response2 = buildFlagsResponse(flagKey, distinctIdContextKey, variants2, rollouts2, null);
         provider.setMockResponse("/flags/definitions", response2);
 
         // Wait for polling to occur
         Thread.sleep(1500);
 
         // Second evaluation should return new value after polling update
-        String result2 = provider.getVariantValue("test-flag", "fallback", context);
+        String result2 = provider.getVariantValue(flagKey, "fallback", context);
         assertEquals("new-value", result2);
 
         provider.stopPollingForDefinitions();
@@ -822,13 +821,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testGetAllVariantsReturnsAllSuccessfullySelectedVariants() {
         // Create multiple flags with 100% rollout
         List<FlagDefinition> flags = Arrays.asList(
-            new FlagDefinition("flag-1", "distinct_id",
+            new FlagDefinition("flag-1", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),
-            new FlagDefinition("flag-2", "distinct_id",
+            new FlagDefinition("flag-2", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-b", "value-b", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),
-            new FlagDefinition("flag-3", "distinct_id",
+            new FlagDefinition("flag-3", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-c", "value-c", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f)))
         );
@@ -866,13 +865,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testGetAllVariantsReturnsOnlySuccessfulVariants() {
         // Create flags with mixed rollout percentages
         List<FlagDefinition> flags = Arrays.asList(
-            new FlagDefinition("flag-success-1", "distinct_id",
+            new FlagDefinition("flag-success-1", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),  // 100% rollout - will succeed
-            new FlagDefinition("flag-fail-1", "distinct_id",
+            new FlagDefinition("flag-fail-1", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-b", "value-b", false, 1.0f)),
                 Arrays.asList(new Rollout(0.0f))),  // 0% rollout - will fallback
-            new FlagDefinition("flag-success-2", "distinct_id",
+            new FlagDefinition("flag-success-2", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-c", "value-c", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f)))   // 100% rollout - will succeed
         );
@@ -897,13 +896,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testGetAllVariantsTracksExposureEventsWhenReportExposureTrue() {
         // Create 3 flags with 100% rollout
         List<FlagDefinition> flags = Arrays.asList(
-            new FlagDefinition("flag-1", "distinct_id",
+            new FlagDefinition("flag-1", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),
-            new FlagDefinition("flag-2", "distinct_id",
+            new FlagDefinition("flag-2", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-b", "value-b", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),
-            new FlagDefinition("flag-3", "distinct_id",
+            new FlagDefinition("flag-3", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-c", "value-c", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f)))
         );
@@ -925,13 +924,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
     public void testGetAllVariantsDoesNotTrackExposureEventsWhenReportExposureFalse() {
         // Create 3 flags with 100% rollout
         List<FlagDefinition> flags = Arrays.asList(
-            new FlagDefinition("flag-1", "distinct_id",
+            new FlagDefinition("flag-1", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),
-            new FlagDefinition("flag-2", "distinct_id",
+            new FlagDefinition("flag-2", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-b", "value-b", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f))),
-            new FlagDefinition("flag-3", "distinct_id",
+            new FlagDefinition("flag-3", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-c", "value-c", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f)))
         );
@@ -962,11 +961,11 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Create flags with experiment metadata
         List<FlagDefinition> flags = Arrays.asList(
-            new FlagDefinition("flag-1", "distinct_id",
+            new FlagDefinition("flag-1", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-a", "value-a", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f)),
                 null, experimentId1, true),
-            new FlagDefinition("flag-2", "distinct_id",
+            new FlagDefinition("flag-2", distinctIdContextKey,
                 Arrays.asList(new Variant("variant-b", "value-b", false, 1.0f)),
                 Arrays.asList(new Rollout(1.0f)),
                 null, experimentId2, false)
@@ -1019,13 +1018,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         Map<String, String> testUsers = new HashMap<>();
         testUsers.put("test-user-123", "treatment");
 
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, testUsers);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, testUsers);
         provider = createProviderWithResponse(response);
         provider.startPollingForDefinitions();
 
         eventSender.reset();
         Map<String, Object> context = buildContext("test-user-123");
-        SelectedVariant<String> result = provider.getVariant("test-flag", new SelectedVariant<>("fallback"), context, true);
+        SelectedVariant<String> result = provider.getVariant(flagKey, new SelectedVariant<>("fallback"), context, true);
 
         // Verify variant was selected
         assertTrue(result.isSuccess());
@@ -1037,7 +1036,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         MockEventSender.ExposureEvent event = eventSender.getEvents().get(eventSender.getEvents().size() - 1);
         assertEquals("test-user-123", event.distinctId);
         assertEquals("$experiment_started", event.eventName);
-        assertEquals("test-flag", event.properties.getString("Experiment name"));
+        assertEquals(flagKey, event.properties.getString("Experiment name"));
         assertEquals("treatment", event.properties.getString("Variant name"));
         assertEquals(Boolean.TRUE, event.properties.getBoolean("$is_qa_tester"));
     }
@@ -1053,13 +1052,13 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         Map<String, String> testUsers = new HashMap<>();
         testUsers.put("different-user", "control");
 
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, testUsers);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, testUsers);
         provider = createProviderWithResponse(response);
         provider.startPollingForDefinitions();
 
         eventSender.reset();
         Map<String, Object> context = buildContext("normal-user-456");
-        SelectedVariant<String> result = provider.getVariant("test-flag", new SelectedVariant<>("fallback"), context, true);
+        SelectedVariant<String> result = provider.getVariant(flagKey, new SelectedVariant<>("fallback"), context, true);
 
         // Verify variant was selected via normal rollout
         assertTrue(result.isSuccess());
@@ -1071,7 +1070,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         MockEventSender.ExposureEvent event = eventSender.getEvents().get(eventSender.getEvents().size() - 1);
         assertEquals("normal-user-456", event.distinctId);
         assertEquals("$experiment_started", event.eventName);
-        assertEquals("test-flag", event.properties.getString("Experiment name"));
+        assertEquals(flagKey, event.properties.getString("Experiment name"));
         assertEquals("control", event.properties.getString("Variant name"));
         assertEquals(Boolean.FALSE, event.properties.getBoolean("$is_qa_tester"));
     }
@@ -1095,7 +1094,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         variantSplits.put("treatment-b", 1.0f);
 
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, null, null, variantSplits));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
         provider.startPollingForDefinitions();
@@ -1103,7 +1102,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         // Test multiple users - all should get treatment-b due to 100% override
         for (int i = 0; i < 10; i++) {
             Map<String, Object> context = buildContext("user-" + i);
-            String result = provider.getVariantValue("test-flag", "fallback", context);
+            String result = provider.getVariantValue(flagKey, "fallback", context);
             assertEquals("All users should get treatment-b due to 100% variant split override",
                 "green", result);
         }
@@ -1126,7 +1125,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         VariantOverride variantOverride = new VariantOverride("treatment"); // But override forces treatment
 
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, null, variantOverride, variantSplits));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
         provider.startPollingForDefinitions();
@@ -1134,7 +1133,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         // Test multiple users - all should get treatment due to variant_override
         for (int i = 0; i < 10; i++) {
             Map<String, Object> context = buildContext("user-" + i);
-            String result = provider.getVariantValue("test-flag", "fallback", context);
+            String result = provider.getVariantValue(flagKey, "fallback", context);
             assertEquals("variant_override should take precedence over variant_splits",
                 "red", result);
         }
@@ -1150,7 +1149,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Rollout without variant_splits (null)
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, null, null, null));
-        String response = buildFlagsResponse("test-flag", "distinct_id", variants, rollouts, null);
+        String response = buildFlagsResponse(flagKey, distinctIdContextKey, variants, rollouts, null);
 
         provider = createProviderWithResponse(response);
         provider.startPollingForDefinitions();
@@ -1158,7 +1157,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         // Test multiple users - all should get treatment based on flag-level splits
         for (int i = 0; i < 10; i++) {
             Map<String, Object> context = buildContext("user-" + i);
-            String result = provider.getVariantValue("test-flag", "fallback", context);
+            String result = provider.getVariantValue(flagKey, "fallback", context);
             assertEquals("Should use flag-level splits when no variant_splits in rollout",
                 "red", result);
         }
@@ -1178,7 +1177,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Create flag definition with hash_salt
         String hashSalt = "abc123def456abc123def456abc12345"; // 32-char hex string
-        FlagDefinition flagDef = new FlagDefinition("test-flag", "distinct_id", variants, rollouts, null, null, null, hashSalt);
+        FlagDefinition flagDef = new FlagDefinition(flagKey, distinctIdContextKey, variants, rollouts, null, null, null, hashSalt);
 
         JSONObject root = new JSONObject();
         JSONArray flagsArray = new JSONArray();
@@ -1192,7 +1191,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Evaluate the flag
         Map<String, Object> context = buildContext("user-123");
-        hashingProvider.getVariantValue("test-flag", "fallback", context);
+        hashingProvider.getVariantValue(flagKey, "fallback", context);
 
         // Verify hash calls
         List<TestableHashingLocalFlagsProvider.HashCall> hashCalls = hashingProvider.getHashCalls();
@@ -1209,7 +1208,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         assertNotNull("Should have called calculateRolloutHash", rolloutHashCall);
         assertEquals("Context value should be user-123", "user-123", rolloutHashCall.contextValue);
-        assertEquals("Flag key should be test-flag", "test-flag", rolloutHashCall.flagKey);
+        assertEquals("Flag key should be test-flag", flagKey, rolloutHashCall.flagKey);
         assertEquals("Hash salt should include rollout index 0", hashSalt + "0", rolloutHashCall.hashSalt);
         assertEquals("Rollout index should be 0", Integer.valueOf(0), rolloutHashCall.rolloutIndex);
     }
@@ -1226,7 +1225,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Create flag definition with hash_salt
         String hashSalt = "def789abc012def789abc012def78901"; // 32-char hex string
-        FlagDefinition flagDef = new FlagDefinition("test-flag", "distinct_id", variants, rollouts, null, null, null, hashSalt);
+        FlagDefinition flagDef = new FlagDefinition(flagKey, distinctIdContextKey, variants, rollouts, null, null, null, hashSalt);
 
         JSONObject root = new JSONObject();
         JSONArray flagsArray = new JSONArray();
@@ -1240,7 +1239,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Evaluate the flag
         Map<String, Object> context = buildContext("user-456");
-        hashingProvider.getVariantValue("test-flag", "fallback", context);
+        hashingProvider.getVariantValue(flagKey, "fallback", context);
 
         // Verify hash calls
         List<TestableHashingLocalFlagsProvider.HashCall> hashCalls = hashingProvider.getHashCalls();
@@ -1256,7 +1255,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         assertNotNull("Should have called calculateVariantHash", variantHashCall);
         assertEquals("Context value should be user-456", "user-456", variantHashCall.contextValue);
-        assertEquals("Flag key should be test-flag", "test-flag", variantHashCall.flagKey);
+        assertEquals("Flag key should be test-flag", flagKey, variantHashCall.flagKey);
         assertEquals("Hash salt should include 'variant'", hashSalt + "variant", variantHashCall.hashSalt);
         assertNull("Rollout index should be null for variant hash", variantHashCall.rolloutIndex);
     }
@@ -1278,7 +1277,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Create flag definition with hash_salt
         String hashSalt = "012345678901234567890123456789ab"; // 32-char hex string
-        FlagDefinition flagDef = new FlagDefinition("test-flag", "distinct_id", variants, rollouts, null, null, null, hashSalt);
+        FlagDefinition flagDef = new FlagDefinition(flagKey, distinctIdContextKey, variants, rollouts, null, null, null, hashSalt);
 
         JSONObject root = new JSONObject();
         JSONArray flagsArray = new JSONArray();
@@ -1292,7 +1291,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Evaluate the flag
         Map<String, Object> context = buildContext("user-789");
-        hashingProvider.getVariantValue("test-flag", "fallback", context);
+        hashingProvider.getVariantValue(flagKey, "fallback", context);
 
         // Verify hash calls - should have 2 rollout hash calls with indices 0 and 1
         List<TestableHashingLocalFlagsProvider.HashCall> hashCalls = hashingProvider.getHashCalls();
@@ -1330,7 +1329,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, null, null, null)); // 100% rollout
 
         // Create flag definition WITHOUT hash_salt (null)
-        FlagDefinition flagDef = new FlagDefinition("test-flag", "distinct_id", variants, rollouts, null, null, null, null);
+        FlagDefinition flagDef = new FlagDefinition(flagKey, distinctIdContextKey, variants, rollouts, null, null, null, null);
 
         JSONObject root = new JSONObject();
         JSONArray flagsArray = new JSONArray();
@@ -1344,7 +1343,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Evaluate the flag
         Map<String, Object> context = buildContext("user-legacy");
-        hashingProvider.getVariantValue("test-flag", "fallback", context);
+        hashingProvider.getVariantValue(flagKey, "fallback", context);
 
         // Verify hash calls use legacy "rollout" salt
         List<TestableHashingLocalFlagsProvider.HashCall> hashCalls = hashingProvider.getHashCalls();
@@ -1373,7 +1372,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
         List<Rollout> rollouts = Arrays.asList(new Rollout(1.0f, null, null, null)); // 100% rollout
 
         // Create flag definition WITHOUT hash_salt (null)
-        FlagDefinition flagDef = new FlagDefinition("test-flag", "distinct_id", variants, rollouts, null, null, null, null);
+        FlagDefinition flagDef = new FlagDefinition(flagKey, distinctIdContextKey, variants, rollouts, null, null, null, null);
 
         JSONObject root = new JSONObject();
         JSONArray flagsArray = new JSONArray();
@@ -1387,7 +1386,7 @@ public class LocalFlagsProviderTest extends BaseFlagsProviderTest {
 
         // Evaluate the flag
         Map<String, Object> context = buildContext("user-legacy-variant");
-        hashingProvider.getVariantValue("test-flag", "fallback", context);
+        hashingProvider.getVariantValue(flagKey, "fallback", context);
 
         // Verify hash calls use legacy "variant" salt
         List<TestableHashingLocalFlagsProvider.HashCall> hashCalls = hashingProvider.getHashCalls();
